KarateProject-Eclipse/target/karate.log
00:48:18.099 [main] DEBUG com.intuit.karate.Suite - [config] classpath:karate-config.js
00:48:21.630 [main] INFO  com.intuit.karate - karate.env system property was: null 
00:48:21.778 [main] ERROR com.intuit.karate - classpath:getRequest/getRequest.feature:4
Given url  https://jsonplaceholder.typicode.com/
js failed:
>>>>
01: https://jsonplaceholder.typicode.com/
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:37 Expected ; but found eof
https://jsonplaceholder.typicode.com/
                                     ^

- org.graalvm.polyglot.Context.eval(Context.java:425)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:169)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:165)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1286)
- com.intuit.karate.core.ScenarioEngine.evalKarateExpression(ScenarioEngine.java:2238)
- com.intuit.karate.core.ScenarioEngine.evalKarateExpression(ScenarioEngine.java:2157)
- com.intuit.karate.core.ScenarioEngine.url(ScenarioEngine.java:379)

classpath:getRequest/getRequest.feature:4
00:49:03.777 [main] DEBUG com.intuit.karate.Suite - [config] classpath:karate-config.js
00:49:06.137 [main] INFO  com.intuit.karate - karate.env system property was: null 
00:49:07.216 [main] DEBUG com.intuit.karate - request:
1 > GET https://jsonplaceholder.typicode.com/user
1 > Host: jsonplaceholder.typicode.com
1 > Connection: Keep-Alive
1 > User-Agent: Apache-HttpClient/4.5.14 (Java/11.0.23)
1 > Accept-Encoding: gzip,deflate


00:49:08.131 [main] DEBUG com.intuit.karate - response time in milliseconds: 906
1 < 404
1 < Date: Sun, 19 May 2024 19:19:08 GMT
1 < Content-Type: application/json; charset=utf-8
1 < Content-Length: 2
1 < Connection: keep-alive
1 < Report-To: {"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1716144432&sid=e11707d5-02a7-43ef-b45e-2cf4d2036f7d&s=%2FUqBNURb5bA0qKK1%2BOMM1VbCnGGrOcGxaKXEM3rUS7Q%3D"}]}
1 < Reporting-Endpoints: heroku-nel=https://nel.heroku.com/reports?ts=1716144432&sid=e11707d5-02a7-43ef-b45e-2cf4d2036f7d&s=%2FUqBNURb5bA0qKK1%2BOMM1VbCnGGrOcGxaKXEM3rUS7Q%3D
1 < Nel: {"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}
1 < X-Powered-By: Express
1 < X-Ratelimit-Limit: 1000
1 < X-Ratelimit-Remaining: 999
1 < X-Ratelimit-Reset: 1716144474
1 < Vary: Origin, Accept-Encoding
1 < Access-Control-Allow-Credentials: true
1 < Cache-Control: max-age=43200
1 < Pragma: no-cache
1 < Expires: -1
1 < X-Content-Type-Options: nosniff
1 < Etag: W/"2-vyGp6PvFo4RvsFtPoIWeCReyIC8"
1 < Via: 1.1 vegur
1 < CF-Cache-Status: HIT
1 < Age: 1916
1 < Server: cloudflare
1 < CF-RAY: 88666fd31f8e0496-CDG
1 < alt-svc: h3=":443"; ma=86400
{}

00:49:08.210 [main] ERROR com.intuit.karate - classpath:getRequest/getRequest.feature:9
Then status 200
status code was: 404, expected: 200, response time in milliseconds: 906, url: https://jsonplaceholder.typicode.com/user, response: 
{}
classpath:getRequest/getRequest.feature:9
